<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sdc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_trip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_frame"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/tv_packing_listtitle" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_type"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_frame"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv1"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:text="@string/tv_packing_additem" />

        <Button
            android:id="@+id/btn1"
            style="@style/ButtonGreenTravel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_of_smallbutton"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/icon_addnote"
            android:text="@string/btn_add"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/et_additem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn1"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_type_newitem"
            android:paddingLeft="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_frame" >

        <Button
            android:id="@+id/btn2"
            style="@style/ButtonGreenTravel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_of_smallbutton"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/icon_save"
            android:text="@string/btn_save"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv2"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/tv_packing_listitem" />

        <!-- <TextView -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignBaseline="@id/tv2" -->
        <!-- android:layout_toRightOf="@id/tv2" -->
        <!-- android:text="@string/tv_packing_swiftleft" -->
        <!-- android:textColor="@color/text_white_color" /> -->

        <com.fortysevendeg.swipelistview.SwipeListView
            android:id="@+id/swipe_lv_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn2"
            android:divider="@null"
            android:listSelector="#00000000"
            sdc:swipeBackView="@id/back"
            sdc:swipeFrontView="@id/front" />
    </RelativeLayout>

</LinearLayout>