<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_frame_dialog"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingBottom="5dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/TextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/tv_edit_category" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonGreenTravel"
            android:layout_width="@dimen/width_of_button"
            android:layout_height="@dimen/height_of_smallbutton"
            android:layout_below="@id/editText2"
            android:layout_toLeftOf="@id/btn_cancel"
            android:background="@drawable/btn_green"
            android:drawableLeft="@drawable/icon_save"
            android:drawablePadding="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_save"
            android:textSize="15sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_edittext"
        android:gravity="top"
        android:hint="@string/hint_title"
        android:inputType="textCapWords"
        android:lines="5"
        android:paddingLeft="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText1"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/btn_delete"
            style="@style/ButtonGreenTravel"
            android:layout_width="@dimen/width_of_button"
            android:layout_height="@dimen/height_of_smallbutton"
            android:layout_below="@id/editText2"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btn_cancel"
            android:background="@drawable/btn_orange"
            android:drawableLeft="@drawable/icon_delete_orange"
            android:drawablePadding="10dp"
            android:text="@string/btn_delete"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonGreenTravel"
            android:layout_width="@dimen/width_of_button"
            android:layout_height="@dimen/height_of_smallbutton"
            android:layout_alignRight="@id/editText1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_orange"
            android:drawableLeft="@drawable/icon_cancel"
            android:drawablePadding="10dp"
            android:text="@string/btn_cancel"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>