<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="15dp"
                android:background="@drawable/travelbuddy" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="6"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_frame"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/tv1"
                    style="@style/TextViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tv_login" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_mail"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/padding_edittext"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="@dimen/padding_edittext"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/padding_edittext"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="@dimen/padding_edittext"
                    android:singleLine="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:button="@drawable/check_box_travel"
                        android:paddingBottom="10dp"
                        android:paddingLeft="@dimen/padding_text_checkbox"
                        android:paddingTop="10dp"
                        android:text="@string/tv_remember_pass"
                        android:checked="true"
                        android:textColor="@color/btn_text_color" />

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/ButtonGreenTravel"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_of_button"
                        android:layout_alignBottom="@id/checkBox1"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@id/checkBox1"
                        android:drawableLeft="@drawable/icon_lock"
                        android:text="@string/btn_login"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/btn_text_color" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="#1EFFFFFF" />

                <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_forgot_password"
                    android:textColor="@drawable/link_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_have_no_acc"
                        android:textColor="@color/text_white_color" />

                    <TextView
                        android:id="@+id/tv_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_link_signup"
                        android:textColor="@drawable/link_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>